--- a/proof/WS.html
+++ b/proof/WS.html
@@ -50,7 +50,39 @@
             <div id="News16b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+<li>  Development of a new stock assessment model with Stock Synthesis 3 (SS3) for hake (Merluccius merluccius) in divisions 8.c and 9.a; Southern stock (Cantabrian Sea and Atlantic Iberian waters).
+ <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Forms/DispForm.aspx?ID=38030">More details</a>
+</li>
 
+<li>  Common sole (Solea solea) stock in ICES divisions 8c9a. Data compilation and preliminary assessment.
+</li>
+
+<li>  ICES BENCHMARK WORKSHOP ON THE DEVELOPMENT OF MSY ADVICE FOR CATEGORY 3 STOCKS USING SURPLUS PRODUCTION MODEL IN CONTINUOUS TIME; SPiCT (WKMSYSPiCT).
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/11816">More details</a>
+</li>
+
+</li> 
+<li>  Intersessional Workshop on the IWC Conservation Management Plan for the Southwest Atlantic Southern Right Whale Population (SWA-RW).
+</li>
+<li>  Review of the population structure of hake, megrim, white and black anglerfish, and sardine in the Northeast Atlantic waters.
+ <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Forms/DispForm.aspx?ID=38030">More details</a>
+</li>
+<li>  Application of a stochastic surplus production model (SPiCT) to produce MSY advice for Nephrops Stock in FU 26-27 (Western Galicia and Northern Portugal).
+ <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Forms/DispForm.aspx?ID=37488">More details</a>
+</li>
+<li>   Preliminary analysis to include data from autumn acoustic surveys in the assessment of the Iberian sardine stock.
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12098">More details</a>
+</li>
+
+<li>  Preliminary observation on sexual maturity of chub mackerel (Scomber colias) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12172">More details</a>
+</li>
+<li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (Scomber colias) in northern Iberian waters: a first attempt.
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12169">More details</a>
+</li>
+<li>  Working Group on Widely Distributed Stocks (WGWIDE).
+ <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Forms/DispForm.aspx?ID=38072">More details</a>
+</li>
 <li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (Scomber colias) in northern Iberian waters: a first attempt.
  <a href="https://www.researchgate.net/publication/351689057_GROWTH_AGE_ESTIMATION_AND_CORROBORATION_OF_NORTHEAST_ATLANTIC_CHUB_MACKEREL_SCOMBER_COLIAS_IN_NORTHERN_IBERIAN_WATERS_A_FIRST_ATTEMPT">More details</a>
 </li>
@@ -74,7 +106,20 @@
             <div id="News15b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+	
+<li> International survey for the assessment of the strength of the sardine and anchovy recruitment in Atlantic Iberian waters.
+ <a href="https://www.ices.dk/community/groups/pages/wgacegg.aspx"></a>
+</li>
 
+<li> Retrospective Pattern in Southern Hake GADGET assessment.
+ <a href="https://archimer.ifremer.fr/doc/00635/74742/74834.pdf"></a>
+</li>
+
+
+
+<li>  Investigation of consistency of juvenile surveys (e.g. JUVESAR, JUVENA, ECOCADIZ RECLUTAS) for potential future incorporation in the assessments.
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12092">More details</a>
+</li>
 <li>  Exploration of historical data and potential solution for the missing information in the Iberian sardine DEPM survey (SAREVA 0320) caused by the COVID-19 pandemic crisis.
 </li>
 
