--- a/index.html
+++ b/index.html
@@ -815,13 +815,47 @@ Below, basic information of the members is shown (emails, social networks, etc),
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
-				<li>
+												<li>
+            <a data-toggle="collapse" class="collapsed" href="#News47">  <i class="ion-android-remove"></i></a>
+            <div id="News47" class="collapse" data-parent="#News-list"> <p align="justify"> </p>  
+<a href=""></a></p>
+</p><div align="center"> <img src="img/new47.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+										<li> 
+            <a data-toggle="collapse" class="collapsed" href="#News50"> Workshop for the evaluation of the Iberian sardine HCR (07/05/2021) <i class="ion-android-remove"></i></a>
+            <div id="News50" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Mervex members participated on the Workshop for the evaluation of the Iberian sardine HCR
+ re-examining the Iberian sardine Harvest Control Rule proposed by Portugal and Spain,  MSY and PA reference points.   </p>  
+</p>
+</p><div align="center"> <img src="img/new50.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+								<li>
+            <a data-toggle="collapse" class="collapsed" href="#News49"> Working Group on the Biology and Assessment of Deep-sea Fisheries Resources (30/04/2021) <i class="ion-android-remove"></i></a>
+            <div id="News49" class="collapse" data-parent="#News-list"> <p align="justify"> Our 
+member
+ Juan Gil Herrera participated on the Working Group on the Biology and Assessment of Deep-sea Fisheries Resources. Always trying to improve stock 
+ assessment results for the deep-sea fisheries resources.</p>  
+</p><div align="center"> <img src="img/new49.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+		 				<li>
             <a data-toggle="collapse" class="collapsed" href="#News47">  Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) (01/04/2021)<i class="ion-android-remove"></i></a>
             <div id="News47" class="collapse" data-parent="#News-list"> <p align="justify"> </p>  Impress Project is organizing the Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) to be held in Vigo on October 19-22!
 <a href="https://mervex-group.github.io/SIMERPE/">Go to the website.</a></p>
 </p><div align="center"> <img src="img/new47.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
             </div>
          </li>
+						<li>
+            <a data-toggle="collapse" class="collapsed" href="#News48"> A new R-package: connectASPIC (22/03/2021) <i class="ion-android-remove"></i></a> 
+            <div id="News48" class="collapse" data-parent="#News-list"> <p align="justify"> Impress members
+ developed an R-package to facilitate the work with ASPIC, a software for fish stock assessment. </p>  
+</p>
+</p><div align="center"> <img src="img/new48.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+
 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News46"> Interview of our member Francisco Izquierdo en "Vivir o Mar" (01/03/2021)<i class="ion-android-remove"></i></a>
             <div id="News46" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Our student (Francisco Izquierdo) explained his recent research entitled "Spatio-Temporal Assessment of the European Hake (<em>Merluccius merluccius</em>) Recruits in the Northern Iberian Peninsula" on the TV program "Vivir o mar".
@@ -837,7 +871,7 @@ Below, basic information of the members is shown (emails, social networks, etc),
          </li>
 		<li>
             <a data-toggle="collapse" class="collapsed" href="#News44"> The World Conference on Marine Biodiversity (11/12/2020)<i class="ion-android-remove"></i></a>
-            <div id="News44" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Impress members have been participated to the 
+            <div id="News44" class="collapse" data-parent="#News-list"> <p align="justify"> </p> Group members have been participated to the 
  World Conference on Marine Biodiversity
  sharing different studies that we are carrying on the many Working Packages of Impress Project.
 
