--- a/proof/WS.html
+++ b/proof/WS.html
@@ -83,9 +83,7 @@
 <li>  Working Group on Widely Distributed Stocks (WGWIDE).
  <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Forms/DispForm.aspx?ID=38072">More details</a>
 </li>
-<li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (Scomber colias) in northern Iberian waters: a first attempt.
- <a href="https://www.researchgate.net/publication/351689057_GROWTH_AGE_ESTIMATION_AND_CORROBORATION_OF_NORTHEAST_ATLANTIC_CHUB_MACKEREL_SCOMBER_COLIAS_IN_NORTHERN_IBERIAN_WATERS_A_FIRST_ATTEMPT">More details</a>
-</li>
+
 
 <li>  Preliminary observation on sexual maturity of chub mackerel (Scomber colias) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
  <a href="https://www.researchgate.net/publication/349244241_Preliminary_observation_on_sexual_maturity_of_chub_mackerel_Scomber_colias_in_the_Northern_Iberian_Atlantic_waters_ICES_Divisions_278c_and_279aN">More details</a>
@@ -106,13 +104,39 @@
             <div id="News15b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
-	
-<li> International survey for the assessment of the strength of the sardine and anchovy recruitment in Atlantic Iberian waters.
- <a href="https://www.ices.dk/community/groups/pages/wgacegg.aspx"></a>
+		<li> Application of SPiCT to produce MSY advice for Nephrops Functional Unit 25 (North Galicia).
+ <a href="http://www.repositorio.ieo.es/e-ieo/bitstream/handle/10508/11797/Use%20of%20SPiCT%20in%20Nep%20FU%2025.pdf?sequence=1&isAllowed=y">More details</a>
 </li>
 
-<li> Retrospective Pattern in Southern Hake GADGET assessment.
- <a href="https://archimer.ifremer.fr/doc/00635/74742/74834.pdf"></a>
+	<li> Application of SPiCT to produce MSY advice for Nephrops Functional Unit 31 (Cantabrian Sea).
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/11722">More details</a>
+</li>
+
+	<li> Report on Nephrops results from Porcupine Bank 2020 Bottom Trawl Survey.
+</li>
+	
+	<li> Applying a stochastic surplus production model (SPICT) to common sole (Solea Solea) stock ICES divisions 8c9a.
+ <a href=""></a>
+</li>
+	
+	<li> Black-bellied anglerfish (Lophius budegassa) in divisions 8.c and 9.a (Cantabrian Sea, Atlantic Iberian waters). 
+ <a href="https://www.ices.dk/sites/pub/Publication%20Reports/Expert%20Group%20Report/Fisheries%20Resources%20Steering%20Group/2021/WKMSYSPiCT_2021.pdf?ID=37488">More details</a>
+</li>
+	
+	<li> Applying a stochastic surplus production model (SPiCT) to Pollack (Pollachius pollachius) stock in ICES Area 8 and division 9a. Data compilation and preliminary assessment.
+ <a href="http://www.repositorio.ieo.es/e-ieo/bitstream/handle/10508/12177/Applying%20a%20stochastic%20surplus%20production%20model%20to%20Pollack_Sampedro_et_al.pdf?sequence=1&isAllowed=y">More details</a>
+</li>
+	
+	<li> Criterios de interpretación de la edad en los otolitos de lirio o bacaladilla del Atlántico Nordeste (<em>Micromesistius poutassou</em>).
+ <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12532">More details</a>
+</li>
+
+	<li> The Chub Mackerel (Scomber Colias) in the North and Northwest Iberian Waters (ICES Divisions 8.c and 9.a North): Growth and Reproduction data.
+ <a href=""></a>
+</li>
+
+<li> International survey for the assessment of the strength of the sardine and anchovy recruitment in Atlantic Iberian waters.
+ <a href="https://www.ices.dk/community/groups/pages/wgacegg.aspx">More details</a>
 </li>
 
 
