--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@ Consellería de Economía, Emprego y Industria</a>", "<a href="https://ceei.xunt
         <header class="section-header">
           <h3>Dissemination</h3>
 		  </header>
+		  <p align="justify"> <b> Course on "Fundamentals in Statistics"</b> by <em>Valentín Trujillo</em>: In order to expand the training provided by and for the GRC-MERVEX, a course on "Fundamentals in Statistics" is available, which addresses the conceptual aspects on which statistical knowledge is based. Although the program seems to be standard, the development of the program and its content presented here, gives an approach that could be described as particular.
+		  Information available on: <a href="https://github.com/MERVEX-group/course-on-Fundamentals-in-Statistics-">Link.</a></p></li></p>  
+<br>
           <p align="justify"> MERVEX shares their research with the scientific community through publications, seminars, workshops and events (click on the links below).
 
         <div class="row flex-items-xs-middle flex-items-xs-center">
