--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Iberian Symposium on Modeling and Assessment of Fishery Resources (SIMERPE) to be held in Vigo on October 19-22! (01/04/2021) </a>
+              <p align="justify"> <a href="#News">Annual meeting of the MERVEX Competitive Reference Group (18/11/2021) </a>
 			   <br>
 			    <br>
-			  <img src="img/new47.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new66.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
