Minor changes workshop.

--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,8 @@ Very productive meeting, reviewing Working Packages and tasks of the project!A l
 
         <header class="section-header">
           <h3>ADVANCES IN FISHERIES SCIENCE: USING ECOLOGICAL MODELS TO INFORM CURRENT FISHERIES ADVICE</h3>
-		  <h3> The <b>WORKSHOP</b> will take place on March, 2022 on AZTI Tecnalia (Bizkaia, Spain).
+		  <h3> The <b>WORKSHOP</b> will take place on March, 2022 on AZTI (Bizkaia, Spain).
+		  <p align="center"> FUNDED by EuroMarine (go to the <a href="https://www.euromarinenetwork.eu/activities/advances-fisheries-science-using-ecological-models-inform-current-fisheries-advice">website.</a>)</p>
 		  </header>
   
         
