--- a/proof/euro1.html
+++ b/proof/euro1.html
@@ -50,7 +50,7 @@
 
     <section id="IMPRESS">
 	<section id="pricing" class="wow fadeInUp section-bg">
-<img src="img/clients/both2.png" alt="" style="max-width:100%;width:auto;height:auto;">
+
       <div class="container">
 <header class="section-header">
           <h3>ACTIVITY DESCRIPTION</h3>
@@ -58,11 +58,11 @@
 
 <p align="justify">There is a need to move fisheries management towards an ecosystem-based approach. This has been increasingly recognized internationally, and several countries have advocated for, and in some cases formally adopted, an Ecosystem-based fisheries management (EBFM) strategy (Pikitch et al., 2004). Yet, current fisheries management in both the Atlantic and Mediterranean waters is <b>still mainly based on advice from single-species stock assessments</b>. A crucial step towards successful fisheries management, encompasses the <b>development of hybrid approaches</b> that bridges the gap between traditional stock assessment models and spatial ecosystem models.</p>
 <br>
-<p align="justify"> Advances in fisheries science: using ecological models to inform current fisheries advice FSW, provides a unique opportunity to <b>bring together interdisciplinary experts</b> in stock assessment and ecosystem models. The workshops will <b>enable knowledge transfer</b> of state-of-the-art fisheries management approaches and furthermore represents a platform that allows experts to join existing efforts on operationalizing ecosystem-based fisheries management from different southern European countries. During the FWS participants will share what has and what has not worked in a <b>variety of different case studies</b>. Participants of the foresight workshop will use the above outcomes as direct <b>input to funding proposals</b>.
+<p align="justify"> Advances in fisheries science: using ecological models to inform current fisheries advice foresight workshop, provides a unique opportunity to <b>bring together interdisciplinary experts</b> in stock assessment and ecosystem models. The workshops will <b>enable knowledge transfer</b> of state-of-the-art fisheries management approaches and furthermore represents a platform that allows experts to join existing efforts on operationalizing ecosystem-based fisheries management from different southern European countries. During the foresight workshop participants will share what has and what has not worked in a <b>variety of different case studies</b>. Participants of the foresight workshop will use the above outcomes as direct <b>input to funding proposals</b>.
 </p>	
 
 <br>
-<p align="justify"> The FWS consists of three days with core activities, and a fourth day of discussion.
+<p align="justify"> The foresight workshop consists of three days with core activities, and a fourth day of discussion.
 <ul>
     <li><b><p align="justify"> Day 1: Introduction: </b>Problem definition; Review of existing techniques (i.e., most used ecosystem and stock assessment models); Overview of case studies and applications;</p></li>
 </ul>
@@ -75,6 +75,12 @@ Review of capabilities and needs in ecosystem models.
 <li><b><p align="justify"> Day 2: Methodology:</b> Exploring statistical and mechanistic methods and identifying possible workflows and conceptual frameworks as well as case studies. Explore how to implement the integration of these tools in the management strategy evaluation process.</p></li>
 <li><b><p align="justify"> Day 3: Results and discussion:</b> Define the best practices to integrate stock assessment and ecosystem models; identify project calls to pursue.</p></li>
 </ul>
+
+<b>References</b>
+
+<br>
+
+Pikitch, E. K., Santora, C., Babcock, E. A., Bakun, A., Bonfil, R., Conover, D. O., ... and Sainsbury, K. J. (2004). Ecosystem-based fishery management. Science, 305(5682), 346-347.
 </p>
 
 <br>
@@ -84,7 +90,7 @@ Review of capabilities and needs in ecosystem models.
           <h3>KEY OBJECTIVES</h3>
 	</header>
 <p align="justify"> 
-FSW Advances in fisheries science: using ecological models to inform current fisheries advice will:
+Foresight workshop Advances in fisheries science: using ecological models to inform current fisheries advice will:
 
 <ul>
 <li><p align="justify">
