--- a/proof/euro2.html
+++ b/proof/euro2.html
@@ -50,7 +50,7 @@
 
     <section id="IMPRESS">
 	<section id="pricing" class="wow fadeInUp section-bg">
-<img src="img/clients/both2.png" alt="" style="max-width:100%;width:auto;height:auto;">
+
       <div class="container">
 <header class="section-header">
           <h3>EXPECTED OUTCOMES</h3>
@@ -78,7 +78,7 @@ A best practice report on how integrate stock assessment and ecosystem models.
 	</header>
 
 
-<p align="justify"> This FWS will tackle the topic of fisheries management and contribute to the discussion and  development of hybrid approaches that bridge the gap between traditional fisheries stock assessment models and spatial ecosystem models, with the production of best practice reports and research papers.
+<p align="justify"> This foresight workshop will tackle the topic of fisheries management and contribute to the discussion and  development of hybrid approaches that bridge the gap between traditional fisheries stock assessment models and spatial ecosystem models, with the production of best practice reports and research papers.
 </p>
 
       </div>
