--- a/proof/euro3.html
+++ b/proof/euro3.html
@@ -50,13 +50,14 @@
 
     <section id="IMPRESS">
 	<section id="pricing" class="wow fadeInUp section-bg">
-<img src="img/clients/both2.png" alt="" style="max-width:100%;width:auto;height:auto;">
+
       <div class="container">
 <header class="section-header">
           <h3>REGISTRATION</h3>
 	</header>
 
-<p align="justify">	Funded by EuroMarine, registration for the workshop is free of charge, all registered participants (limit of 26) can participate. Workshop attendance is by invitation only, but that we have reserved a few spaces for EuroMarine participants if interested (preferentially PhD and ECRs). EuroMarine participants should contact the organizers if they wish to join.
+<p align="justify">	Funded by EuroMarine, registration for the workshop is free of charge, all registered participants (limit of 26) can participate. Workshop attendance is by invitation only, but that we have reserved a few spaces for EuroMarine participants if interested (preferentially PhD and ECRs). EuroMarine participants
+ should contact the organizers if they wish to join (grazia.pennino@ieo.es).
 </p>	
 	
       </div>
