--- a/proof/WS.html
+++ b/proof/WS.html
@@ -54,6 +54,14 @@
 
 </li>
 
+	<li> Application of SPiCT to produce MSY advice for <em>Nephrops</em> Functional Unit 31.
+ <a href="./proof/wd19.pdf">More details</a>
+</li>
+
+		<li> Application of SPiCT to produce MSY advice for <em>Nephrops</em> Functional Unit 25.
+ <a href="./proof/wd20.pdf">More details</a>
+</li>
+
 <li>  Common sole (Solea solea) stock in ICES divisions 8c9a. Data compilation and preliminary assessment.
 </li>
 
@@ -65,19 +73,19 @@
 <li>  Intersessional Workshop on the IWC Conservation Management Plan for the Southwest Atlantic Southern Right Whale Population (SWA-RW).
 </li>
 <li>  Review of the population structure of hake, megrim, white and black anglerfish, and sardine in the Northeast Atlantic waters.
-
+ <a href="./proof/wd21.pdf">More details</a>
 </li>
-<li>  Application of a stochastic surplus production model (SPiCT) to produce MSY advice for Nephrops Stock in FU 26-27 (Western Galicia and Northern Portugal).
+<li>  Application of a stochastic surplus production model (SPiCT) to produce MSY advice for <em>Nephrops</em> Stock in FU 26-27 (Western Galicia and Northern Portugal).
 
 </li>
 <li>   Preliminary analysis to include data from autumn acoustic surveys in the assessment of the Iberian sardine stock.
  <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12098">More details</a>
 </li>
 
-<li>  Preliminary observation on sexual maturity of chub mackerel (Scomber colias) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
+<li>  Preliminary observation on sexual maturity of chub mackerel (<em>Scomber colias</em>) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
  <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12172">More details</a>
 </li>
-<li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (Scomber colias) in northern Iberian waters: a first attempt.
+<li>  Growth, age estimation and corroboration of northeast atlantic chub mackerel (<em>Scomber colias</em>) in northern Iberian waters: a first attempt.
  <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12169">More details</a>
 </li>
 <li>  Working Group on Widely Distributed Stocks (WGWIDE).
@@ -85,7 +93,7 @@
 </li>
 
 
-<li>  Preliminary observation on sexual maturity of chub mackerel (Scomber colias) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
+<li>  Preliminary observation on sexual maturity of chub mackerel (<em>Scomber colias</em>) in the Northern Iberian Atlantic waters (ICES Divisions 27.8.c and 27.9.a.N).
  <a href="https://www.researchgate.net/publication/349244241_Preliminary_observation_on_sexual_maturity_of_chub_mackerel_Scomber_colias_in_the_Northern_Iberian_Atlantic_waters_ICES_Divisions_278c_and_279aN">More details</a>
 </li>
 
@@ -104,25 +112,26 @@
             <div id="News15b" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
-		<li> Application of SPiCT to produce MSY advice for Nephrops Functional Unit 25 (North Galicia).
- <a href="http://www.repositorio.ieo.es/e-ieo/bitstream/handle/10508/11797/Use%20of%20SPiCT%20in%20Nep%20FU%2025.pdf?sequence=1&isAllowed=y">More details</a>
+		<li> Application of SPiCT to produce MSY advice for <em>Nephrops</em>  Functional Unit 25 (North Galicia).
+ <a href="./proof/wd16.pdf">More details</a>
 </li>
 
-	<li> Application of SPiCT to produce MSY advice for Nephrops Functional Unit 31 (Cantabrian Sea).
- <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/11722">More details</a>
+	<li> Application of SPiCT to produce MSY advice for <em>Nephrops</em>  Functional Unit 31 (Cantabrian Sea).
+ <a href="./proof/wd17.pdf">More details</a>
 </li>
 
-	<li> Report on Nephrops results from Porcupine Bank 2020 Bottom Trawl Survey.
+	<li> Report on <em>Nephrops</em> results from Porcupine Bank 2020 Bottom Trawl Survey.
+	<a href="./proof/wd18.pdf">More details</a>
 </li>
 	
-	<li> Applying a stochastic surplus production model (SPICT) to common sole (Solea Solea) stock ICES divisions 8c9a.
+	<li> Applying a stochastic surplus production model (SPICT) to common sole (<em>Solea Solea</em>) stock ICES divisions 8c9a.
  <a href=""></a>
 </li>
 	
-	<li> Black-bellied anglerfish (Lophius budegassa) in divisions 8.c and 9.a (Cantabrian Sea, Atlantic Iberian waters). 
+	<li> Black-bellied anglerfish (<em>Lophius budegassa</em>) in divisions 8.c and 9.a (Cantabrian Sea, Atlantic Iberian waters). 
  </li>
 	
-	<li> Applying a stochastic surplus production model (SPiCT) to Pollack (Pollachius pollachius) stock in ICES Area 8 and division 9a. Data compilation and preliminary assessment.
+	<li> Applying a stochastic surplus production model (SPiCT) to Pollack (<em>Pollachius pollachius</em>) stock in ICES Area 8 and division 9a. Data compilation and preliminary assessment.
  <a href="http://www.repositorio.ieo.es/e-ieo/bitstream/handle/10508/12177/Applying%20a%20stochastic%20surplus%20production%20model%20to%20Pollack_Sampedro_et_al.pdf?sequence=1&isAllowed=y">More details</a>
 </li>
 	
@@ -130,7 +139,7 @@
  <a href="http://www.repositorio.ieo.es/e-ieo/handle/10508/12532">More details</a>
 </li>
 
-	<li> The Chub Mackerel (Scomber Colias) in the North and Northwest Iberian Waters (ICES Divisions 8.c and 9.a North): Growth and Reproduction data.
+	<li> The Chub Mackerel (<em>Scomber Colias</em>) in the North and Northwest Iberian Waters (ICES Divisions 8.c and 9.a North): Growth and Reproduction data.
  <a href=""></a>
 </li>
 
@@ -146,7 +155,7 @@
 <li>  Exploration of historical data and potential solution for the missing information in the Iberian sardine DEPM survey (SAREVA 0320) caused by the COVID-19 pandemic crisis.
 </li>
 
-<li>  Changes in the length-weight relationship in Northern Stock of European hake (Merluccius merluccius).
+<li>  Changes in the length-weight relationship in Northern Stock of European hake (<em>Merluccius merluccius</em>).
  <a href="./proof/pub3.html">More details</a>
 </li>
 
@@ -202,7 +211,7 @@ Functional Unit 31 (Cantabrian Sea) 2019.
 			  			 
 </p>
           		  		  <ul>
-<li>  Ecological basis to embrace temporal assessment and spatial management of the European hake (Merluccius merluccius) in the northern Iberian Peninsula.
+<li>  Ecological basis to embrace temporal assessment and spatial management of the European hake (<em>Merluccius merluccius</em>) in the northern Iberian Peninsula.
  <a href="./proof/pub2.html">More details</a>
 </li>
 
