--- a/proof/WS.html
+++ b/proof/WS.html
@@ -63,6 +63,7 @@
 </li>
 
 <li>  Common sole (Solea solea) stock in ICES divisions 8c9a. Data compilation and preliminary assessment.
+<a href="./proof/wd22.pdf">More details</a>
 </li>
 
 <li>  ICES BENCHMARK WORKSHOP ON THE DEVELOPMENT OF MSY ADVICE FOR CATEGORY 3 STOCKS USING SURPLUS PRODUCTION MODEL IN CONTINUOUS TIME; SPiCT (WKMSYSPiCT).
