--- a/proof/congress.html
+++ b/proof/congress.html
@@ -269,7 +269,7 @@ Cordeiro, G., Neira, J.A., Otero, A., and Santos, M. B. 2019. Rays in bottom tra
 trammel nets in south western European waters: discards, survivability and implications
 for the application of the landing obligation. XX Iberian Symposium on Marine Biology
 Studies (SIEBM XX). University of Minho, Braga, Portugal, 9th to 12th September
-2019. <a href="http://20thsiebm.org/">Go to the congress.</a></p></li>
+2019. <a href="https://cbma.uminho.pt/xxsiebm/">Go to the congress.</a></p></li>
 
 
 <li><p align="justify">  Valeiras, J., Covelo, P., Ferreira, M., Ruiz, L., Cermeño, P., Laria, L., Eira, C., and López,
@@ -277,7 +277,7 @@ A.
 2019. Basking shark Cetorhinus maximus, (Lamniformes:Cetorhinidae), from northern
 and western Iberian Peninsula waters (NE Atlantic). XX Iberian Symposium on Marine
 Biology Studies (SIEBM XX). University of Minho, Braga, Portugal, 9th to 12th
-September 2019. <a href="http://20thsiebm.org/">Go to the congress.</a></p></li>
+September 2019. <a href="https://cbma.uminho.pt/xxsiebm/">Go to the congress.</a></p></li>
 
 <li><p align="justify">  Abad, E., Valeiras, J., Velasco, E., Velasco, F., Serrano, A., Punzón, A., Pierce, G. 2019.
 Identifying factors that affect horned octopus Eledone cirrhosa abundance at North
