--- a/proof/papers.html
+++ b/proof/papers.html
@@ -76,6 +76,13 @@
             <div id="News16" class="collapse" data-parent="#News-list"> 
               <p>
 	<ul>
+	<li><p align="justify"> <b>Pennino, M.G., Izquierdo, F.</b>, Paradinas, I., <b>Cousido-Rocha, M.</b>, Velasco, F., <b>Cerviño, S.</b> (2022).
+Identifying persistent biomass areas: The case study of the common sole in the northern Iberian waters.
+ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0165783621003246"> Link</a></p></li>
+  <li><p align="justify">  <b>Cousido-Rocha, M., Cerviño, S., Alonso-Fernández, A.,
+Gil, J., González Herraiz, I., Rincón, M.M., Ramos, F., Rodríguez-Cabello, C., Sampedro, P., Vila, Y., Pennino, M.G.</b>  (2022).
+Applying length-based assessment methods to fishery resources in the Bay of Biscay and Iberian Coast ecoregion: Stock status and parameter sensitivity.
+ <a href="https://www.sciencedirect.com/science/article/pii/S0165783621003258?dgcid=author"> Link</a></p></li> 
 		<li><p align="justify"> Sumaila, U. R., Skerritt, D., Schuhbauer, A., Villasante, S., Cisneros-Montemayor, A. M., Sinan, H., Burnside, D. et al. (<b>Pennino, M. G.</b>) (2021). WTO must ban harmful fisheries subsidies. Science. 374 p 544. 
  <a href="https://www.science.org/doi/10.1126/science.abm1680"> Link</a></p></li>
  	<li><p align="justify"> Steenbeek, J., Buszowski, J., Chagaris, D., Christensen, V., Coll, M., Fulton, E., Katsanevakis, S., Lewis, K., Mazaris, A., Macias, D., Mutsert, K., Oldford, G., <b>Pennino, M. G.</b>,  Piroddi, C., Romagnoni, G., Serpetti, N., Shin, Y., Spence, M., Stelzenmüller, V., (2021). Making spatial-temporal marine ecosystem modelling better – a perspective. Environmental Modelling and Software. 105209.
