--- a/index.html
+++ b/index.html
@@ -1475,10 +1475,10 @@ Very productive meeting, reviewing Working Packages and tasks of the project!A l
 
         <header class="section-header">
           <h3>ADVANCES IN FISHERIES SCIENCE: USING ECOLOGICAL MODELS TO INFORM CURRENT FISHERIES ADVICE</h3>
-		  <h3> The <b>WORKSHOP</b> will take place on March, 2022 on AZTI (Bizkaia, Spain).
-		  <p align="center"> FUNDED by EuroMarine (go to the <a href="https://www.euromarinenetwork.eu/activities/advances-fisheries-science-using-ecological-models-inform-current-fisheries-advice">website.</a>)</p>
+		  <h3> The <b>WORKSHOP</b> will take place on October 17-19, 2022 on AZTI (Bizkaia, Spain).
+		  <p align="center"> FUNDED by EuroMarine (go to the <a href="https://euromarinenetwork.eu/activities/advances-in-fisheries-science-using-ecological-models-to-inform-current-fisheries-advice/">website.</a>)</p>
 		  </header>
-  
+ 
         
         <div class="row flex-items-xs-middle flex-items-xs-center">
                 <!-- Regular Plan  -->
