--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <div class="box">
               <h4 class="title"><a href="#News">News</a></h4>
 			  <br>
-              <p align="justify"> <a href="#News">Annual meeting of the MERVEX Competitive Reference Group (18/11/2021) </a>
+              <p align="justify"> <a href="#News">The International Statistical Ecology Conference(01/07/2022)  </a>
 			   <br>
 			    <br>
-			  <img src="img/new66.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
+			  <img src="img/new77.jpg" alt="" style="max-width:100%;width:auto;height:auto;">
 			  </p>
             </div>
           </div>
@@ -819,7 +819,97 @@ Below, basic information of the members is shown (emails, social networks, etc),
         </header>
 		
         <ul id="News-list" class="wow fadeInUp">
+				<li>
+            <a data-toggle="collapse" class="collapsed" href="#News77"> The International Statistical Ecology Conference(01/07/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News77" class="collapse" data-parent="#News-list"> <p align="justify"> 
+		Mervex members have been participated in the 
+The International Statistical Ecology Conference
+ in Cape Town. Marta Cousido talks about new ideas to deal with bias sampling in ogive estimation. Francisco Izquierdo discussed about: Is it worth to increase the complexity of stock assessment models for species with sex dimorphism?
+<a href="https://www.youtube.com/watch?v=2gQl9oCkFWE">Go to the video.</a></p> 
+<a href="img/poster.jfif">Go to the poster.</a></p> 
+<div align="center"> <img src="img/new77.jpg" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>	
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News76">  Working Group on Cephalopod Fisheries and Life History (14/06/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News76" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Eva Velasco and Xulio Valeiras has been participated on the WGCEPH improving knowledge about and the assessment of cephalopods as an exploited resource.
+<a href="https://www.ices.dk/community/groups/Pages/WGCEPH.aspx">More details.</a></p> 
+<div align="center"> <img src="img/new76.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>		
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News75"> XVIII Edición de la Conferencia Española de Biometría (30/05/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News75" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Alba Fuster has been presented her research "Assessment of uncertainty in biomass estimation using different statistical tools employed in fisheries management" winning the best poster award at the XVIII Edición de la Conferencia Española de Biometría.
+<a href="http://halweb.uc3m.es/cebmadrid/index.html">More details.</a></p> 
+<div align="center"> <img src="img/new75.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News74"> Project Meeting Impress(24/05/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News74" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Explaining advances of the aims proposed in the project and establishing future studies/activities to conclude the poject in the next months.
+<div align="center"> <img src="img/new74.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+						 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News73"> New article "Bayesian spatio-temporal CPUE standardization: Case study of European sardine (<em>Sardina pilchardus</em>) along the western coast of Portugal"  (20/05/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News73" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Impress members have published an article focus on the standardization of the data of sardine fishery-dependent catch-per-unit- effort (CPUE) from the west coast of Portugal using Bayesian hierarchical spatio-temporal models (BHSTM) with the integrated nested Laplace approximation (INLA). 
+			 <a href="https://onlinelibrary.wiley.com/doi/10.1111/fme.12556">More details.</a></p> 
+<div align="center"> <img src="img/new73.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+					<li>
+            <a data-toggle="collapse" class="collapsed" href="#News72"> Working Group for the Bay of Biscay and the Iberian Waters Ecoregion(01/05/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News72" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Impress members have participated on the WGBIE which carries  out stock assessments and catch forecasts on Northeast Atlantic shelf fish stocks and provide a first draft of the ICES advice for all the stocks.
+			 <a href="https://www.ices.dk/community/groups/Pages/WGbie.aspx">More details.</a></p> 
+<div align="center"> <img src="img/new72.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+				 		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News71"> New article "This is what we know: Assessing the stock status of the data-poor common sole on the Iberian coast"  (19/02/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News71" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Impress members have published an article analyzing the status of sole in ICES 8c9a areas  using 3 size-based methods: length-based indicators, length-based spawning potential ratio and mean length-based mortality.
+			 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272771422000075">More details.</a></p> 
+<div align="center"> <img src="img/new71.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+			<li>
+            <a data-toggle="collapse" class="collapsed" href="#News70"> Benchmark workshop on anglerfish and hake-WKANGHAKE 2022  (18/02/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News70" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Impress members have participated on the Benchmark workshop on anglerfish and hake (WKANGHAKE 2022) proposing a sex-separated Stock Synthesis (SS) model for the assessment of southern hake (ICES divisions 8.c and 9.a).
+			 <a href="https://www.ices.dk/news-and-events/meeting-calendar/Pages/ICES-CalendarDisp.aspx?sd=fa8806b1-282d-ec11-9296-00155d2c0c14">More details.</a></p> 
+<div align="center"> <img src="img/new70.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
 
+		<li>
+            <a data-toggle="collapse" class="collapsed" href="#News69"> New article "Studying the sensitivity of data-poor stock assessment methods"  (21/01/2022)   <i class="ion-android-remove"></i></a>
+            <div id="News69" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Impress members have published an article studying the sensitivity of data-poor stock assessment methods to uncertainty about biological information.
+			 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0165783621003258?via%3Dihub">More details.</a></p> 
+<div align="center"> <img src="img/new69.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+														<li>
+            <a data-toggle="collapse" class="collapsed" href="#News68"> New article "Identifying persistent biomass areas"  (17/01/2021)   <i class="ion-android-remove"></i></a>
+            <div id="News68" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			Common sole is a highly valued species in the market, in this new article, pusblished by Impress members, 
+			it's analized which are the areas where this species is most abundant and its temporal persistence.
+			 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0165783621003246">More details.</a></p> 
+<div align="center"> <img src="img/new68.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
+												<li>
+            <a data-toggle="collapse" class="collapsed" href="#News67"> Coming workshop on "Ecological Models" (17/12/2021)   <i class="ion-android-remove"></i></a>
+            <div id="News67" class="collapse" data-parent="#News-list"> <p align="justify"> 
+			EuroMarine funded a workshop entitled "ADVANCES IN FISHERIES SCIENCE: USING ECOLOGICAL MODELS TO INFORM CURRENT FISHERIES ADVICE". The WORKSHOP will take place on March, 2022 on AZTI Tecnalia (Bizkaia, Spain).  <a href="https://mervex-group.github.io/MERVEX/">More details.</a></p> 
+<div align="center"> <img src="img/new67.png" alt="" style="max-width:100%;width:auto;height:auto;">          </div>
+            </div>
+         </li>
 		<li> 
             <a data-toggle="collapse" class="collapsed" href="#News66"> Annual meeting of the MERVEX Competitive Reference Group (18/11/2021)  <i class="ion-android-remove"></i></a>
             <div id="News66" class="collapse" data-parent="#News-list"> <p align="justify"> Mervex members has been participated on a day meeting for reviewing the
